Prevent wrapping around glyphs.

--- a/app/css/faq.css
+++ b/app/css/faq.css
@@ -21,3 +21,7 @@ h3 {
 img {
   vertical-align: middle;
 }
+
+span {
+  white-space: nowrap;
+}
